# OmniText

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: editing.yaml  insertion.yaml  removal.yaml  repositioning.yaml  rescaling.yaml
notebooks/: demo.ipynb
notebooks/legacy/: OmniText_Editing_Ref1.ipynb  OmniText_Editing_Ref2.ipynb  OmniText_Insertion_Ref1.ipynb  OmniText_Insertion_Ref2.ipynb  OmniText_Removal.ipynb  OmniText_Repositioning.ipynb  OmniText_Rescaling.ipynb  README.md
scripts/: download_data.py  download_weights.py  run_editing.py  run_insertion.py  run_removal.py  run_repositioning.py  run_rescaling.py
src/omnitext/: __init__.py  char_mask.py  data.py  frequency.py  optim.py
src/omnitext/model/: custom_model.py  custom_model_v2.py  util.py
src/omnitext/pipeline/: pipeline_v0.py  pipeline_v0_removal.py
src/omnitext/technique/: attend_and_excite.py
src/omnitext/util/: ptp.py  text.py  util.py
